--- a/Website/Model.html
+++ b/Website/Model.html
@@ -16,18 +16,18 @@
   
  <!-- Navbar (placed at the bottom of the header image) Page Hrefs are local placeholders. Change to Relative once fully implemented -->
  <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <a href="#Tool" class="w3-bar-item w3-button">Tool</a>
-    <a href="#Information" class="w3-bar-item w3-button">Information</a>
-    <a href="C:\Users\pburn\Documents\Python Scripts\Projects\Final Project\Final-Project\Website\Model.html" class="w3-bar-item w3-button">Model Information</a>
+    <a href="Homepage.html#Tool" class="w3-bar-item w3-button">Tool</a>
+    <a href="Homepage.html#Information" class="w3-bar-item w3-button">Information</a>
+    <a href="Model.html" class="w3-bar-item w3-button">Model Information</a>
   </div>
   </header>
   
   <!-- Navbar on small screens -->
   <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
   <div class="w3-bar w3-light-grey">
-    <a href="#Query" class="w3-bar-item w3-button">Tool</a>
-    <a href="#Information" class="w3-bar-item w3-button">Information</a>
-    <a href="C:\Users\pburn\Documents\Python Scripts\Projects\Final Project\Final-Project\Website\Model.html" class="w3-bar-item w3-button">Model Information</a>
+    <a href="Homepage.html#Tool" class="w3-bar-item w3-button">Tool</a>
+    <a href="Homepage.html#Information" class="w3-bar-item w3-button">Information</a>
+    <a href="Model.html" class="w3-bar-item w3-button">Model Information</a>
   </div>
   </div>
 
