--- a/Website/Homepage.html
+++ b/Website/Homepage.html
@@ -8,7 +8,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-  <img class="w3-image" src="C:\Users\pburn\Documents\Python Scripts\Projects\Final Project\Final-Project\Website\Resources\Pulse2.jpg" alt="Me" width="800" height="50">
+  <img class="w3-image" src="Resources\Pulse2.jpg" alt="Me" width="800" height="50">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Finger On The Pulse</h1>
     <h3 class="w3-hide-medium w3-hide-small">How Are You Doing?</h3>
@@ -34,36 +34,43 @@
 <div class="w3-content w3-padding-large w3-margin-top" id="Tool">
 
 <!-- User Input For Information Section -->
-  <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="Query">
-    <h3 class="w3-center">Your Information</h3>
-    <hr>
-    <p>Blah Blah Blah. Information and what not. Im thinking a general background here or something</p>
+<div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="Query">
+  <h3 class="w3-center">Your Information</h3>
+  <hr>
+  <p>Blah Blah Blah. Information and what not. Im thinking a general background here or something</p>
 
-    <form action="/action_page.php" target="_blank">
-      <div class="w3-section">
-        <label>Question 1</label>
-        <input class="w3-input w3-border" type="text" required name="Name">
-      </div>
-      <div class="w3-section">
-        <label>Question 2</label>
-        <input class="w3-input w3-border" type="text" required name="Email">
-      </div>
-      <div class="w3-section">
-        <label>Question 3</label>
-        <input class="w3-input w3-border" required name="Message">
-      </div>
-      <div class="w3-section">
-        <label>Question 4</label>
-        <input class="w3-input w3-border" required name="Message">
-      </div>
-      <div class="w3-section">
-        <label>Question 5</label>
-        <input class="w3-input w3-border" required name="Message">
-      </div>
-      <button type="submit" class="w3-button w3-block w3-dark-grey">Submit</button>
-    </form><br>
-    
-  </div>
+  <form action="Results.html" target="_blank">
+    <div class="w3-section">
+      <label>Gender</label>
+      <input class="w3-input w3-border" type="text" required name="Gender" placeholder="Gender">
+    </div>
+    <div class="w3-section">
+      <label>Age</label>
+      <input class="w3-input w3-border" type="text" required name="Age" placeholder="Gender">
+    </div>
+    <div class="w3-section">
+      <label>Caffine (MG)</label>
+      <input class="w3-input w3-border" type="text" required name="Caffine">
+    </div>
+    <div class="w3-section">
+      <label>Systolic: Blood pressure mm Hg</label>
+      <input class="w3-input w3-border" type="text" required name="Systolic">
+    </div>
+    <div class="w3-section">
+      <label>Direct HDL-Cholesterol (mg/dL)</label>
+      <input class="w3-input w3-border" type="text" required name="Cholesterol">
+    </div>
+    <div class="w3-section">
+      <label>Avg Drinks per Day</label>
+      <input class="w3-input w3-border" type="text" required name="Drinks">
+    </div>
+    <div class="w3-section">
+      <label>Smoker?</label>
+      <input class="w3-input w3-border" type="text" required name="Smoker">
+    </div>
+    <button type="submit" value="Save" id="Save" class="w3-button w3-block w3-dark-grey">Submit</button>
+  </form><br>
+</div>
 
   <!--More Info Holder-->
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="Information">
